decap config edit

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -12,8 +12,8 @@ collections:
     editor:
       preview: false
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Year', name: 'year', widget: 'datetime', default: '{{now}}', dateformat: 'YYYY' }
-      - { label: 'Medium', name: 'description', widget: 'string' }
+      - { label: 'Titel', name: 'titel', widget: 'string' }
+      - { label: 'Jaar', name: 'jaar', widget: 'datetime', default: '{{now}}', dateformat: 'YYYY' }
+      - { label: 'Medium', name: 'medium', widget: 'string' }
       - { label: 'Beschrijving', name: 'beschrijving', widget: 'markdown' }
-      - { labael: 'Link', name: 'link', widget: 'text' }
+      - { label: 'Link', name: 'link', widget: 'text', required: 'false' }
