--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,14 +6,14 @@ public_folder: /img
 collections:
   - name: 'Madelon ter Borg'
     label: 'Work'
-    folder: '.'
+    folder: 'content/'
     create: true
     slug: '{{year}}-{{slug}}'
     editor:
       preview: false
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Year', name: 'year', widget: 'datetime', default: '{{now}}', dateformat: 'YYYY' }
-      - { label: 'Medium', name: 'description', widget: 'string' }
+      - { label: 'Titel', name: 'titel', widget: 'string' }
+      - { label: 'Jaar', name: 'jaar', widget: 'datetime', default: '{{now}}', dateformat: 'YYYY' }
+      - { label: 'Medium', name: 'medium', widget: 'string' }
       - { label: 'Beschrijving', name: 'beschrijving', widget: 'markdown' }
-      - { labael: 'Link', name: 'link', widget: 'text' }
+      - { label: 'Link', name: 'link', widget: 'text', required: 'false' }
