fix cms config proberen

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,8 +23,8 @@ collections:
       - { label: "Medium", name: "medium", widget: "string" }
       - { label: "Beschrijving", name: "beschrijving", widget: "markdown" }
       - { label: "Link", name: "link", widget: "text", required: false }
-  - name: "pages"
-    label: "Pages"
+  - name: "Pagina's"
+    label: "pagina's"
     files:
       - file: "content/_index.md"
         label: "Home Page"
@@ -38,7 +38,7 @@ collections:
               widget: "object",
               fields:
                 [
-                  { label: "Heading", name: "heading", widget: string },
+                  { label: "Heading", name: "heading", widget: "string" },
                   { label: "Text", name: "text", widget: "text" },
                 ],
             }
