--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,16 +12,15 @@ collections:
     editor:
       preview: false
     fields:
-      - { label: "Titel", name: "titel", widget: "string" }
+      - { label: "Titel", name: "title", widget: "string" }
       - {
           label: "Jaar",
-          name: "jaar",
+          name: "date",
           widget: "datetime",
-          default: "{{now}}",
-          dateformat: "YYYY",
+          date_format: "YYYY",
         }
       - { label: "Medium", name: "medium", widget: "string" }
-      - { label: "Beschrijving", name: "beschrijving", widget: "markdown" }
+      - { label: "Beschrijving", name: "description", widget: "markdown" }
       - { label: "Link", name: "link", widget: "text", required: false }
   - name: "pagina"
     label: "Pagina's"
