--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,29 +4,28 @@ backend:
 media_folder: static/img
 public_folder: /img
 collections:
-  - name: "werken"
+  - name: "Madelon ter Borg"
     label: "Werken"
     folder: "content/werken"
     create: true
-    slug: "{{year}}-{{slug}}"
+    slug: "{{titel}}"
     editor:
       preview: false
     fields:
-      - { label: "Titel", name: "titel", widget: "string" }
+      - { label: "Titel", name: "title", widget: "string" }
       - {
           label: "Jaar",
-          name: "jaar",
+          name: "date",
           widget: "datetime",
-          default: "{{now}}",
-          dateformat: "YYYY",
+          date_format: "YYYY",
         }
       - { label: "Medium", name: "medium", widget: "string" }
-      - { label: "Beschrijving", name: "beschrijving", widget: "markdown" }
+      - { label: "Beschrijving", name: "description", widget: "markdown" }
       - { label: "Link", name: "link", widget: "text", required: false }
-  - name: "pages"
-    label: "Pages"
+  - name: "pagina"
+    label: "Pagina's"
     files:
-      - file: "themes/simpel/layouts/index.html"
+      - file: "content/_index.md"
         label: "Home Page"
         name: "home"
         fields:
@@ -42,9 +41,9 @@ collections:
                   { label: "Text", name: "text", widget: "text" },
                 ],
             }
-      - file: "content/over.md"
-        label: "Over"
-        name: "over"
+      - file: "content/about/index.md"
+        label: "About"
+        name: "about"
         fields:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "text" }
